--- a/templates/base.html
+++ b/templates/base.html
@@ -39,5 +39,14 @@
     <footer class="footer">
         <p>&copy; 2024 Sahayak. All Rights Reserved.</p>
     </footer>
+
+    <script>
+        setTimeout(function() {
+            const flashMessages = document.getElementById('flash-messages');
+            if (flashMessages) {
+                flashMessages.style.display = 'none';
+            }
+        }, 3000); // 3000 ms = 3 seconds
+    </script>
 </body>
 </html>
