--- a/templates/start_fundraiser.html
+++ b/templates/start_fundraiser.html
@@ -29,6 +29,16 @@
                 <label for="goal">Goal Amount:</label>
                 <input type="number" id="goal" name="goal" required>
             </div>
+
+	    <label for="category">Category:</label>
+            <select name="category" id="category" required>
+        	<option value="Education">Education</option>
+        	<option value="Health">Health</option>
+        	<option value="Animal Welfare">Animal Welfare</option>
+        	<option value="Environment">Environment</option>
+        	<!-- Add more categories as needed -->
+    	    </select>
+
 	    <div class="input-group">
         	<label for="image">Upload Image:</label>
         	<input type="file" id="image" name="image" accept="image/*">
