--- a/templates/about.html
+++ b/templates/about.html
@@ -8,22 +8,19 @@
             <div class="column">
                 <h2>About Sahayak</h2>
                 <p>
-                    Sahayak is a platform created to help the IIT Bombay community start and support fundraisers for various causes.
-                    Whether it's for personal needs, community projects, or charitable donations, our platform provides an easy and
+                    Sahayak is a platform created to help the IIT Bombay community, to start and support fundraisers for various causes. Whether it's for personal needs, community projects, or charitable donations, our platform provides an easy and
                     efficient way to raise funds.
                 </p>
             </div>
             <div class="column">
                 <p>
-                    Our mission is to empower the IIT Bombay community by providing them with the tools they need to achieve their financial
-                    goals and make a meaningful impact in the lives of people associated with IIT Bombay. At Sahayak, we believe that
+                    Our mission is to empower the IIT Bombay community by providing them with the tools they need to achieve their financial goals and make a meaningful impact in the lives of people associated with IIT Bombay. At Sahayak, we believe that
                     small contributions can make a big difference, and together, we can create positive change.
                 </p>
             </div>
             <div class="column">
                 <p>
-                    Once the platform is fully operational, it can also be expanded to connect with other organizations sharing similar
-                    values, leading to a broader impact.
+                    Once the platform is fully operational, it can also be expanded to connect with other organizations sharing similar values, leading to a broader impact.
                 </p>
                 <p>
                     If you have any questions or want to learn more about our platform, feel free to <a href="{{ url_for('contact') }}">contact us</a>.
