--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 Sahayak. All Rights Reserved.</p>
+        <p>Sahayak 2024</p>
     </footer>
 
     <script>
