--- a/templates/payment.html
+++ b/templates/payment.html
@@ -122,7 +122,7 @@
                         body: JSON.stringify({
                             "razorpay_payment_id": response.razorpay_payment_id,
                             "razorpay_order_id": response.razorpay_order_id,
-                            "fundraiser_id": fundraiserId,
+		            "fundraiser_id": fundraiserId,
                             "amount": amount / 100
                         })
                     })
@@ -130,7 +130,7 @@
                     .then(data => {
                         if (data.status === 'success') {
                             alert('Donation Successful!');
-                            window.location.href = '/fundraisers';
+                            window.location.href = data.redirect;
                         } else {
                             alert('Donation Failed. Try again.');
                         }
